--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.1.0",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "@use-expo/font": "^2.0.0",
+    "base-64": "^0.1.0",
     "expo": "~38.0.8",
+    "expo-document-picker": "^8.2.1",
+    "expo-image-picker": "^8.3.0",
     "expo-status-bar": "^1.0.2",
+    "firebase": "^7.9.0",
+    "moment": "^2.27.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-masked-text": "^1.13.0",
     "react-native-popup-menu": "^0.15.9",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.9.0",
